--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -20,7 +20,8 @@ builds:
       - darwin
     goarch:
       - amd64
-
+    ldflags:
+      - -s -w -X github.com/WangYihang/tranco/pkg/common.Version={{.Version}} -X github.com/WangYihang/tranco/pkg/common.BuildTime={{.Date}} -X github.com/WangYihang/tranco/pkg/common.CommitHash={{.Commit}} -X main.builtBy=goreleaser'
 
 archives:
   - 
