--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,10 +7,23 @@ before:
     # you may remove this if you don't need go generate
     - go generate ./...
 
-
 builds:
   - id: "tranco"
     main: "./cmd/client"
+    binary: tranco
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - windows
+      - darwin
+    goarch:
+      - amd64
+    ldflags:
+      - -s -w -X github.com/WangYihang/tranco-go-package/pkg/version.Version={{.Version}} -X github.com/WangYihang/tranco-go-package/pkg/version.BuildTime={{.Date}} -X github.com/WangYihang/tranco-go-package/pkg/version.CommitHash={{.Commit}} -X main.builtBy=goreleaser'
+
+  - id: "tranco-server"
+    main: "./cmd/server"
     binary: tranco
     env:
       - CGO_ENABLED=0
